add dreadstone tablet to JEI bookmarks

--- a/jei_bookmarks.ini
+++ b/jei_bookmarks.ini
@@ -1,3 +1,4 @@
 T:{id:"contenttweaker:infernal_fortress_scepter",Count:1,Damage:0s}
 T:{id:"nethercraft:pyridium_pickaxe",Count:1,Damage:0s}
 T:{id:"quark:backpack",Count:1,Damage:0s,tag:{Inventory:[{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{}]}}
+T:{id:"corpsecomplex:scroll",Count:1,Damage:0s}
