--- a/config/champions.cfg
+++ b/config/champions.cfg
@@ -15,6 +15,7 @@ general {
     # List of mobs that will always spawn as champions, can optionally include specific tier (i.e. 'minecraft:spider;2') or tier range (i.e. 'minecraft:spider;1;3
     S:"Champion Mobs List" <
         minecraft:wither;1
+        da:flame_knight;1
      >
 
     # Set whether champions can spawn from mob spawners
