BOMD tweaks, lore

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -85,6 +85,7 @@ definitions {
 
     #  [default: ]
     S:level3_entries <
+        contenttweaker:infernal_core
         contenttweaker:infernal_fortress_scepter
         contenttweaker:riftbreaker_crystal
         mysticstaffs:fire_staff
