--- a/config/setbonus/1.12.2.009+.cfg
+++ b/config/setbonus/1.12.2.009+.cfg
@@ -92,7 +92,7 @@ general {
         S:"2f. Bonuses" <
             FullDiamondArmorBonus, [Night Vision(30s) every 60s], 1, FullDiamondArmor
             
-            FullInfernalArmorBonus, [Fire Immunity] [Strength 1] [Increased AOE of Infernal Sword], 1, FullInfernalArmor
+            FullInfernalArmorBonus, [Fire Immunity] [Strength 1] [Increased AOE of Blade of the Last Vigil], 1, FullInfernalArmor
             
             FullVeilArmorBonus, [Cure all effects every 15s], 1, FullVeilArmor
             
