--- a/config/Dungeon Additions.cfg
+++ b/config/Dungeon Additions.cfg
@@ -2,7 +2,7 @@
 
 general {
     # Change the scaling added per player of attack damage to bosses, not counting one player
-    D:"Boss Scaling Attack Damage"=0.18
+    D:"Boss Scaling Attack Damage"=0.1
 
     # Change the scaling added per player of health added to bosses, not counting one player
     D:"Boss Scaling Health"=0.4
@@ -18,10 +18,10 @@ general {
     I:"Burning Flame Arena Mob Spawns"=6
 
     # Change the size of the Burning Flame Arena, basically how many extra pieces are added onto the boss arena
-    I:"Burning Flame Arena Size"=6
+    I:"Burning Flame Arena Size"=3
 
     # Change the spawn weight of the Burning Flame Arena (The Nether Dungeon), higher number means lower frequency
-    I:"Burning Flame Arena Spawn Weight"=50
+    I:"Burning Flame Arena Spawn Weight"=25
 
     # Change the y level height the nether dungeon spawns at
     I:"Burning Flame Arena Y Level"=75
@@ -39,7 +39,7 @@ general {
     D:"Knight of Burning Flame Armor Toughness"=8.0
 
     # Change the Cooldown of the Burning Knight of Flame for when in a aggrivated state, in ticks (20 ticks = 1 second
-    I:"Knight of Burning Flame Attack Cooldown Aggrivation State"=10
+    I:"Knight of Burning Flame Attack Cooldown Aggrivation State"=20
 
     # Change the Cooldown of the Burning Knight of Flame when from a longer distance not in a aggrivated state, in ticks (20 ticks = 1 second)
     I:"Knight of Burning Flame Attack Cooldown Long Distance"=50
@@ -48,7 +48,7 @@ general {
     I:"Knight of Burning Flame Attack Cooldown Short Distance"=15
 
     # Change the attack damage of this boss (Knight of Burning Flame)
-    D:"Knight of Burning Flame Attack Damage"=6.0
+    D:"Knight of Burning Flame Attack Damage"=5.5
 
     # Change the timer that the Knight of Burning Flame can block attacks, take not this is only fired between cool downs of each attack in seconds
     D:"Knight of Burning Flame Block Cooldown"=3.5
@@ -57,13 +57,13 @@ general {
     D:"Knight of Burning Flame Health"=100.0
 
     # Change the amount of health healed when the Knight of Burning Flame uses a health potion. this is measured in X / Maxhealth. so .07 would be 7% of it's max health
-    D:"Knight of Burning Flame Health Potion Amount"=0.07
+    D:"Knight of Burning Flame Health Potion Amount"=0.15
 
     # Change the cooldown before the Knight of Burning Flame can use another Health Potion in seconds, take note! This boss is limited in how many potions it can use. Only using one per 25% Health if it gets a chance to use one
     I:"Knight of Burning Flame Health Potion Cooldown"=25
 
     # Do the Projectiles the nether knight shoots set ablaze when exploding
-    B:"Knight of Burning Flame Let the world Burn"=true
+    B:"Knight of Burning Flame Let the world Burn"=false
 
     # Change the attack damage of Mini Void Blossom
     D:"Mini Void Blossom Attack Damage"=8.0
