--- a/config/betterhurttimer.cfg
+++ b/config/betterhurttimer.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 general {
+    B:doLogging=false
 
     ##########################################################################################################
     # config
@@ -72,9 +73,6 @@ general {
             # Min: 0.0
             # Max: 1.7976931348623157E308
             D:nextAttackDamageDifference=0.5
-
-            # Min: 0.0
-            # Max: 1.7976931348623157E308
             B:nextAttackDamageDifferenceApply=true
 
             # Default value replacing vanilla's iFrame after shield damage.
@@ -142,11 +140,6 @@ general {
             # 
             S:itemSource <
              >
-
-            # Compatability mode.
-            # 
-            # Mixins will not apply when this is true.
-            # 
             B:turnOffMixins=false
         }
 
