reduce dreadswine damage

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -62,6 +62,7 @@ attributes {
         nethercraft:bloody_zombie;generic.movementSpeed;1;0.3
         nethercraft:dark_zombie;generic.movementSpeed;1;0.2
         minecraft:zombie_pigman;generic.movementSpeed;1;0.1
+        minecraft:zombie_pigman;generic.attackDamage;0;-5
 
         minecraft:zombie;generic.movementSpeed;1;0.3
         
