--- a/config/setbonus/1.12.2.009+.cfg
+++ b/config/setbonus/1.12.2.009+.cfg
@@ -63,7 +63,7 @@ general {
         S:"2. Equipment Sets" <
             FullDiamondArmor, Light In The Dark, head = DiamondHelm, chest = DiamondChest, legs = DiamondLeggings, feet = DiamondBoots
             
-            FullInfernalArmor, Infernal, head = InfernalHelm, chest = InfernalChest, legs = InfernalLeggings, feet = InfernalBoots
+            FullInfernalArmor, From The Ashes, head = InfernalHelm, chest = InfernalChest, legs = InfernalLeggings, feet = InfernalBoots
             
             FullVeilArmor, Supernatural Resilience, head = VeilHelm, chest = VeilChest, legs = VeilLeggings, feet = VeilBoots
             
