--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -21,6 +21,7 @@ compat {
 reroll {
     # You can use most valid commands. '@p' will replace wil the player's name. You can also use format strings. Examples: 'say hello world', 'advancement revoke @p everything', 'say hello %s, you are %s!;playername;amazing' [default: [advancement revoke @p everything]]
     S:"Additional Commands" <
+        deathscrollclear @p
         gamemode survival @p
         advancement revoke @p everything
         es_advancement @p retries set 0
@@ -86,7 +87,6 @@ reroll {
         nethercraft:glowood_pickaxe;1
         nethercraft:glowood_axe;1
         nethercraft:glowood_shovel;1
-        minecraft:torch;1
      >
 
     # Determines the minimum distance to teleport when you reroll. [range: 256 ~ 10240, default: 512]
