--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -717,6 +717,12 @@ general {
         # Fixes grenades not being consumed if it is the last one
         B:"Fishs Undead Grenade Consuming (Fish's Undead Rising)"=false
 
+        # Fixes some Fishs Undead Rising mobs applying potion effects on the client side
+        B:"Fishs Undead Rising Client Side Effects (Fishs Undead Rising)"=false
+
+        # Fixes a memory leak with Fish's Undead Rising Skeleton King Crown
+        B:"Fishs Undead Rising Skeleton King Crown Mem Leak (Fishs Undead Rising)"=false
+
         # Fixes a crash when something runs pickBlock on a ClassyHat hat stand and passes in a null player
         B:"Fix ClassyHats Hat Container Null Player Crash (ClassyHats)"=false
 
