glow stew now stacks, no longer returns bowl

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -152,6 +152,7 @@ definitions {
         %Bandages
         %Medkit
         contenttweaker:scrambled_magma_eggs
+        contenttweaker:glow_stew
         simpleores:tin_pickaxe
         adfinders:metals_finder
         %Glowstone
