all tools/weapons kept on death

--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -185,22 +185,87 @@ inventory {
     S:"Essential Items" <
         enderskills:book
         minecraft:torch
+        quark:backpack
+        mysticstaffs:invisibility_staff
+        mysticstaffs:heal_staff
+        mysticstaffs:fire_staff
+        mysticstaffs:wind_staff
+        mysticstaffs:flight_staff
+        mysticstaffs:glow_staff
+        mysticstaffs:path_staff
+        mysticstaffs:ice_ball_staff
+        mysticstaffs:sunstrike_staff
+        mysticstaffs:solar_beam_staff
         nethercraft:pyridium_pickaxe
+        nethercraft:pyridium_axe
+        nethercraft:pyridium_shovel
+        nethercraft:pyridium_sword
         nethercraft:neridium_pickaxe
+        nethercraft:neridium_axe
+        nethercraft:neridium_shovel
+        nethercraft:neridium_sword
         nethercraft:netherrack_pickaxe
+        nethercraft:netherrack_axe
+        nethercraft:netherrack_shovel
+        nethercraft:netherrack_sword
         nethercraft:glowood_pickaxe
+        nethercraft:glowood_axe
+        nethercraft:glowood_shovel
+        nethercraft:glowood_sword
         simpleores:tin_pickaxe
         simpleores:copper_pickaxe
         simpleores:mythril_pickaxe
         simpleores:adamantium_pickaxe
         simpleores:onyx_pickaxe
         erebus:jade_pickaxe
-        minecraft:diamond_pickaxe
-        minecraft:golden_pickaxe
-        minecraft:stone_pickaxe
-        minecraft:wooden_pickaxe
+        erebus:jade_sword
+        erebus:jade_shovel
+        erebus:jade_axe
         minecraft:iron_pickaxe
         contenttweaker:soul_anchor
+        minecraft:iron_sword
+        minecraft:wooden_sword
+        minecraft:wooden_shovel
+        minecraft:wooden_pickaxe
+        minecraft:wooden_axe
+        minecraft:stone_sword
+        minecraft:stone_shovel
+        minecraft:stone_pickaxe
+        minecraft:stone_axe
+        minecraft:diamond_sword
+        minecraft:diamond_shovel
+        minecraft:diamond_pickaxe
+        minecraft:diamond_axe
+        minecraft:golden_sword
+        minecraft:golden_shovel
+        minecraft:golden_pickaxe
+        minecraft:golden_axe
+        erebus:wasp_sword
+        erebus:wasp_dagger
+        da:ambition_sword
+        da:void_dagger
+        simpleores:mythril_bow
+        simpleores:onyx_bow
+        simpleores:copper_sword
+        simpleores:copper_pickaxe
+        simpleores:copper_axe
+        simpleores:copper_shovel
+        simpleores:tin_sword
+        simpleores:tin_pickaxe
+        simpleores:tin_axe
+        simpleores:tin_shovel
+        simpleores:mythril_sword
+        simpleores:mythril_pickaxe
+        simpleores:mythril_axe
+        simpleores:mythril_shovel
+        simpleores:adamantium_sword
+        simpleores:adamantium_pickaxe
+        simpleores:adamantium_axe
+        simpleores:adamantium_shovel
+        simpleores:onyx_sword
+        simpleores:onyx_pickaxe
+        simpleores:onyx_axe
+        simpleores:onyx_shovel
      >
 
     # List of items that are always dropped
