echo of betrayal and obelisk hint, code organization

--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -224,6 +224,8 @@ inventory {
         minecraft:iron_pickaxe
         contenttweaker:soul_anchor
         minecraft:iron_sword
+        minecraft:iron_axe
+        minecraft:iron_shovel
         minecraft:wooden_sword
         minecraft:wooden_shovel
         minecraft:wooden_pickaxe
