--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -91,7 +91,14 @@ definitions {
         mysticstaffs:fire_staff
         mysticstaffs:heal_staff
         contenttweaker:deviled_egg_sandwich
-        %Infernium
+        %Infernium Ingot
+        %Raw Infernium
+        %Infernium Ore
+        %Infernium Sword
+        %Infernium Pickaxe
+        %Infernium Axe
+        %Infernium Shovel
+        %Infernium Bow
         artifacts:shiny_red_balloon
         artifacts:flame_pendant
         %Ghast
