--- a/jei_bookmarks.ini
+++ b/jei_bookmarks.ini
@@ -1,5 +1,5 @@
-T:{id:"contenttweaker:infernal_fortress_scepter",Count:1,Damage:0s}
-T:{id:"nethercraft:pyridium_pickaxe",Count:1,Damage:0s}
-T:{id:"quark:backpack",Count:1,Damage:0s,tag:{Inventory:[{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{}]}}
 T:{id:"corpsecomplex:scroll",Count:1,Damage:0s}
 T:{id:"da:ambition_flame",Count:1,Damage:0s}
+T:{id:"contenttweaker:infernal_core",Count:1,Damage:0s}
+T:{id:"contenttweaker:infernal_fortress_scepter",Count:1,Damage:0s}
+T:{id:"nethercraft:pyridium_pickaxe",Count:1,Damage:0s}
