unbreakable ancient infernal stone

--- a/config/tool_progression/block_overwrites.cfg
+++ b/config/tool_progression/block_overwrites.cfg
@@ -61,6 +61,7 @@ block {
     S:"quark:slate:*"=pickaxe=6
 
     S:"erebus:forcefield:*"=pickaxe=9999
+    S:"da:fire_stone_lit:*"=pickaxe=9999
     
 }
 
