--- a/config/WyrmsOfNyrus/2/general.cfg
+++ b/config/WyrmsOfNyrus/2/general.cfg
@@ -50,6 +50,14 @@ ai {
 }
 
 
+##########################################################################################################
+# creeped
+#--------------------------------------------------------------------------------------------------------#
+# 
+# General mob properties for The Creeped. Doesn't affect non-creeped.
+# 
+##########################################################################################################
+
 creeped {
     # Makes the Creeped immune to cactus damage. Default: false
     B:"Immune to cacti"=true
@@ -112,14 +120,33 @@ gestalt {
 }
 
 
+##########################################################################################################
+# global
+#--------------------------------------------------------------------------------------------------------#
+# 
+# Universal & misc properties for the mod.
+# 
+##########################################################################################################
+
 global {
     # Metalcomb arrays are treated like iron ingots and can replace iron ingots in recipes. Default: true
     B:Metalcombs-as-iron=true
 
     # Wyrms, Creeped, and Follies can hold some secrets... Default: true
     B:"Mob Easter Eggs"=true
+
+    # The new Evolution system. Wyrms will evolve forwards and backwards, and may mutate drastically if the variant is pushed by enough deaths in a day.Disabling this stops the stats from changing, but they will still be read. Default: true
+    B:"Natural Selection"=true
 }
 
+
+##########################################################################################################
+# wyrmfollies
+#--------------------------------------------------------------------------------------------------------#
+# 
+# General mob properties for Wyrmfollies. Doesn't affect non-follies.
+# 
+##########################################################################################################
 
 wyrmfollies {
     # The factor of which wyrmfolly stats increase. Default: 1.05
@@ -134,7 +161,7 @@ wyrmfollies {
 # wyrms
 #--------------------------------------------------------------------------------------------------------#
 # 
-# Universal & misc properties for the mod.
+# General mob properties for Wyrms. Doesn't affect non-wyrms.
 # 
 ##########################################################################################################
 
