--- a/config/WyrmsOfNyrus/2/invasion.cfg
+++ b/config/WyrmsOfNyrus/2/invasion.cfg
@@ -154,6 +154,17 @@
 # 
 # The Wyrm Invasion is the main mechanic of this mod, with a fully-fledged event system with threats that keep players on edge.
 # 
+# 
+# Event IDS: 
+# 
+# 0 - Visitor
+# 1 - Incursion
+# 2 - Scouters
+# 3 - Wyrmlings
+# 4 - Creep pods
+# 5 - Creepwyrm
+# 6 - Air raid
+# 7 - Flashstorm
 ##########################################################################################################
 
 invasion {
@@ -161,10 +172,6 @@ invasion {
     I:"Invade-able dimensions" <
         0
         1
-        685
-        687
-        688
-        684
      >
 
     # Every x minutes, an invasion event takes place. Default: 7
@@ -186,7 +193,7 @@ invasion {
     B:"Invasion enabled"=true
 
     # Allows the invasion to start naturally without needing admin commands. Default: true
-    B:"Invasion starts naturally"=false
+    B:"Invasion starts naturally"=true
 
     # All invasion events take place a certain distance away from the player. Increasing this range makes it less likely that events happen near the player, but may cause performance hitches due to potential chunkloading. Usually keep this number in increments of 16 (Chunk x/z size). Default is calculated for Minecraft's usual 12 chunk render radius. Default: 192
     I:"Max event distance"=192
@@ -218,6 +225,7 @@ invasion {
         2,10,10,5,2
         6,10,10,3,1
         3,10,40,5,1
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 5000
@@ -237,6 +245,7 @@ invasion {
         4,10,20,3,1
         6,5,10,4,2
         6,2,10,5,1
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 10000
@@ -256,6 +265,7 @@ invasion {
         4,30,10,3,1
         6,5,10,5,2
         6,2,10,5,3
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 50000
@@ -275,6 +285,7 @@ invasion {
         4,30,10,3,1
         6,5,10,5,2
         6,2,10,5,3
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 100000
@@ -294,6 +305,7 @@ invasion {
         4,30,10,3,1
         6,5,10,5,2
         6,2,10,5,3
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 2500000
@@ -313,6 +325,7 @@ invasion {
         4,30,10,3,1
         6,5,10,5,2
         6,2,10,5,3
+        7,5,25,3,1
      >
 }
 
