--- a/config/WyrmsOfNyrus/1/invasion.cfg
+++ b/config/WyrmsOfNyrus/1/invasion.cfg
@@ -154,6 +154,17 @@
 # 
 # The Wyrm Invasion is the main mechanic of this mod, with a fully-fledged event system with threats that keep players on edge.
 # 
+# 
+# Event IDS: 
+# 
+# 0 - Visitor
+# 1 - Incursion
+# 2 - Scouters
+# 3 - Wyrmlings
+# 4 - Creep pods
+# 5 - Creepwyrm
+# 6 - Air raid
+# 7 - Flashstorm
 ##########################################################################################################
 
 invasion {
@@ -196,7 +207,7 @@ invasion {
     # This creates an event with the ID of 1 with a weight of 10.
     # In the latter format, this creates an event with the ID of 1 with a weight of 10, giving it 40 seconds per stage, with 3 stages total and takes place at level 3
     S:"Stage 0 event pool" <
-        
+         
      >
 
     # How many points are required to reach this phase of the alien invasion. Phase 0 takes place below this. Default: 1000
@@ -214,6 +225,7 @@ invasion {
         2,10,10,5,2
         6,10,10,3,1
         3,10,40,5,1
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 5000
@@ -233,6 +245,7 @@ invasion {
         4,10,20,3,1
         6,5,10,4,2
         6,2,10,5,1
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 10000
@@ -252,6 +265,7 @@ invasion {
         4,30,10,3,1
         6,5,10,5,2
         6,2,10,5,3
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 50000
@@ -271,6 +285,7 @@ invasion {
         4,30,10,3,1
         6,5,10,5,2
         6,2,10,5,3
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 100000
@@ -290,6 +305,7 @@ invasion {
         4,30,10,3,1
         6,5,10,5,2
         6,2,10,5,3
+        7,5,25,3,1
      >
 
     # How many points are required to reach this phase of the alien invasion. Default: 2500000
@@ -309,6 +325,7 @@ invasion {
         4,30,10,3,1
         6,5,10,5,2
         6,2,10,5,3
+        7,5,25,3,1
      >
 }
 
