--- a/config/eruditetweaks.cfg
+++ b/config/eruditetweaks.cfg
@@ -1,103 +1,185 @@
 # Configuration file
 
-##########################################################################################################
-# corpse complex tweaks
-#--------------------------------------------------------------------------------------------------------#
-# corpse complex tweaks
-##########################################################################################################
-
 "corpse complex tweaks" {
-    # Whether to show any messages after running the command /deathscrollclear [default: true]
-    B:"Messages for /deathscrollclear"=true
+    B:"Messages for /deathscrollclear"=false
 }
 
 
 ##########################################################################################################
-# defiled lands tweaks
+# corpse complex: command tweaks
 #--------------------------------------------------------------------------------------------------------#
-# Format - modid1:itemid1:metadata1, modid2:itemid2:metadata2
+# corpse complex tweaks
 ##########################################################################################################
 
+"corpse complex: command tweaks" {
+    # Whether to show any messages after running the command /deathscrollclear [default: true]
+    B:"Messages for /deathscrollclear"=false
+}
+
+
 "defiled lands tweaks" {
-    #  [default: [minecraft:enchanting_table:0, defiledlands:conjuring_altar:0]]
     S:"Custom Defilements" <
      >
-
-    # Should the base Defilement conversions be registered? [default: true]
     B:"register base defilements"=false
 }
 
 
 ##########################################################################################################
-# quark tweaks
+# defiled lands: defilement conversion tweaks
 #--------------------------------------------------------------------------------------------------------#
-# Format - modid1:itemid1,itemdamage1,minamount1,maxamount1, modid2:itemid2,itemdamage2,minamount2,maxamount2, tradeweight
-# Note: Trades that include minecraft:air are treated as a 'skip' for that slot when rolled
+# Format - modid1:itemid1:metadata1, modid2:itemid2:metadata2
 ##########################################################################################################
 
+"defiled lands: defilement conversion tweaks" {
+    #  [default: [minecraft:enchanting_table:0, defiledlands:conjuring_altar:0]]
+    S:"Custom Defilements" <
+        minecraft:enchanting_table:0, defiledlands:conjuring_altar:0
+     >
+
+    # Should the base Defilement conversions be registered? [default: true]
+    B:"register base defilements"=true
+}
+
+
+##########################################################################################################
+# minecraft: animal ai tweaks
+#--------------------------------------------------------------------------------------------------------#
+# Animal AI Tweaks
+##########################################################################################################
+
+"minecraft: animal ai tweaks" {
+    #  [default: false]
+    B:"enable rabbit AI additions"=false
+
+    #  [default: false]
+    B:"enable sheep AI additions"=false
+
+    #  [default: minecraft:potatoes:7,minecraft:wheat:7]
+    S:"rabbit crops to raid"=minecraft:potatoes:7,minecraft:wheat:7
+
+    #  [default: [minecraft:dirt:2,minecraft:dirt:0]]
+    S:"sheep grass to dirt conversions" <
+        minecraft:dirt:2,minecraft:dirt:0
+     >
+
+    #  [default: minecraft:web,minecraft:deadbush]
+    S:"sheep tall grasses to eat"=minecraft:web,minecraft:deadbush
+}
+
+
+##########################################################################################################
+# minecraft: animal breeding tweaks
+#--------------------------------------------------------------------------------------------------------#
+# Format - modid:entityid,minExtraSpawns,MaxExtraSpawns
+##########################################################################################################
+
+"minecraft: animal breeding tweaks" {
+    #  [default: [minecraft:pig,0-2]]
+    S:"Extra Baby Spawns" <
+        minecraft:pig,0-2
+     >
+
+    #  [default: minecraft:wheat_seeds,minecraft:rotten_flesh]
+    S:"chicken breeding item list"=minecraft:wheat_seeds,minecraft:rotten_flesh
+
+    #  [default: minecraft:wheat,minecraft:beetroot]
+    S:"cow breeding item list"=minecraft:wheat,minecraft:beetroot
+
+    # Should vanilla animals have their breeding items tweaked? [default: false]
+    B:"enable breeding item changes"=false
+
+    #  [default: minecraft:wheat,minecraft:pumpkin]
+    S:"horse breeding item list"=minecraft:wheat,minecraft:pumpkin
+
+    #  [default: minecraft:wheat,minecraft:pumpkin_seeds]
+    S:"llama breeding item list"=minecraft:wheat,minecraft:pumpkin_seeds
+
+    #  [default: minecraft:carrot,minecraft:apple]
+    S:"pig breeding item list"=minecraft:carrot,minecraft:apple
+
+    #  [default: minecraft:golden_carrot,minecraft:tallgrass]
+    S:"rabbit breeding item list"=minecraft:golden_carrot,minecraft:tallgrass
+
+    #  [default: minecraft:wheat,minecraft:melon]
+    S:"sheep breeding item list"=minecraft:wheat,minecraft:melon
+}
+
+
 "quark tweaks" {
-    #  [default: [minecraft:emerald,0,2,4, minecraft:bone,0,3,5, 100]]
     S:"Trade Slot 1" <
      >
-
-    #  [default: [minecraft:bone,0,10,14, minecraft:emerald,0,1,1, 50], [minecraft:gunpowder,0,7,16, minecraft:emerald,0,1,1, 50]]
     S:"Trade Slot 2" <
      >
-
-    #  [default: [minecraft:coal,0,16,25, minecraft:emerald,0,1,1, 50], [minecraft:air,0,0,0, minecraft:air,0,0,0, 50]]
     S:"Trade Slot 3" <
      >
-
-    #  [default: [minecraft:emerald,0,12,23, minecraft:diamond,0,1,1, 50], [minecraft:air,0,0,0, minecraft:air,0,0,0, 50]]
     S:"Trade Slot 4" <
      >
-
-    #  [default: [minecraft:emerald,0,8,12, minecraft:iron_pickaxe,0,1,1, 25], [minecraft:emerald,0,6,9, minecraft:iron_shovel,0,1,1, 25], [minecraft:air,0,0,0, minecraft:air,0,0,0, 50]]
     S:"Trade Slot 5" <
      >
-
-    #  [default: [minecraft:emerald,0,6,9, quark:archaeologist_hat,5,1,1, 100]]
     S:"Trade Slot 6" <
      >
-
-    # Should the Archaeologist's trades be tweaked at all? [default: true]
     B:"replace archaeologist trades"=false
 }
 
 
 ##########################################################################################################
-# vanilla tweaks
+# quark: archaeologist trade tweaks
 #--------------------------------------------------------------------------------------------------------#
-# Format - modid:entityid,minExtraSpawns,MaxExtraSpawns
+# Format - modid1:itemid1,itemdamage1,minamount1,maxamount1, modid2:itemid2,itemdamage2,minamount2,maxamount2, tradeweight
+# Note: Trades that include minecraft:air are treated as a 'skip' for that slot when rolled
 ##########################################################################################################
 
-"vanilla tweaks" {
-    #  [default: [minecraft:pig,0-2]]
-    S:"Extra Baby Spawns" <
+"quark: archaeologist trade tweaks" {
+    #  [default: [minecraft:emerald,0,2,4, minecraft:bone,0,3,5, 100]]
+    S:"Trade Slot 1" <
+        minecraft:emerald,0,2,4, minecraft:bone,0,3,5, 100
      >
 
-    #  [default: minecraft:wheat_seeds,minecraft:rotten_flesh]
+    #  [default: [minecraft:bone,0,10,14, minecraft:emerald,0,1,1, 50], [minecraft:gunpowder,0,7,16, minecraft:emerald,0,1,1, 50]]
+    S:"Trade Slot 2" <
+        minecraft:bone,0,10,14, minecraft:emerald,0,1,1, 50
+        minecraft:gunpowder,0,7,16, minecraft:emerald,0,1,1, 50
+     >
+
+    #  [default: [minecraft:coal,0,16,25, minecraft:emerald,0,1,1, 50], [minecraft:air,0,0,0, minecraft:air,0,0,0, 50]]
+    S:"Trade Slot 3" <
+        minecraft:coal,0,16,25, minecraft:emerald,0,1,1, 50
+        minecraft:air,0,0,0, minecraft:air,0,0,0, 50
+     >
+
+    #  [default: [minecraft:emerald,0,12,23, minecraft:diamond,0,1,1, 50], [minecraft:air,0,0,0, minecraft:air,0,0,0, 50]]
+    S:"Trade Slot 4" <
+        minecraft:emerald,0,12,23, minecraft:diamond,0,1,1, 50
+        minecraft:air,0,0,0, minecraft:air,0,0,0, 50
+     >
+
+    #  [default: [minecraft:emerald,0,8,12, minecraft:iron_pickaxe,0,1,1, 25], [minecraft:emerald,0,6,9, minecraft:iron_shovel,0,1,1, 25], [minecraft:air,0,0,0, minecraft:air,0,0,0, 50]]
+    S:"Trade Slot 5" <
+        minecraft:emerald,0,8,12, minecraft:iron_pickaxe,0,1,1, 25
+        minecraft:emerald,0,6,9, minecraft:iron_shovel,0,1,1, 25
+        minecraft:air,0,0,0, minecraft:air,0,0,0, 50
+     >
+
+    #  [default: [minecraft:emerald,0,6,9, quark:archaeologist_hat,5,1,1, 100]]
+    S:"Trade Slot 6" <
+        minecraft:emerald,0,6,9, quark:archaeologist_hat,5,1,1, 100
+     >
+
+    # Should the Archaeologist's trades be tweaked at all? [default: true]
+    B:"replace archaeologist trades"=true
+}
+
+
+"vanilla tweaks" {
+    S:"Extra Baby Spawns" <
+     >
     S:"chicken breeding item list"=
-
-    #  [default: minecraft:wheat,minecraft:beetroot]
     S:"cow breeding item list"=
-
-    #  [default: minecraft:wheat,minecraft:pumpkin]
     S:"horse breeding item list"=
-
-    #  [default: minecraft:wheat,minecraft:pumpkin_seeds]
     S:"llama breeding item list"=
-
-    #  [default: minecraft:carrot,minecraft:apple]
     S:"pig breeding item list"=
-
-    #  [default: minecraft:golden_carrot,minecraft:tallgrass]
     S:"rabbit breeding item list"=
-
-    #  [default: minecraft:wheat,minecraft:melon]
     S:"sheep breeding item list"=
-
-    # Should vanilla animals have their breeding items tweaked? [default: false]
     B:"tweak vanilla animals"=false
 }
 
