--- a/config/Universal Tweaks - Tweaks.cfg
+++ b/config/Universal Tweaks - Tweaks.cfg
@@ -45,8 +45,20 @@ general {
         # Allows the player to jump over fences and walls
         B:"Fence/Wall Jump"=true
 
+        # Causes Barrier Particles to always be displayed to players in Creative mode
+        B:"Improve Barrier Particle Display"=true
+
         # Allows the creation of grass paths everywhere (beneath fence gates, trapdoors, ...)
         B:"Lenient Paths"=true
+
+        # Controls if the observer activates itself on the first tick when it is placed
+        B:"Prevent Observer Activating on Placement"=false
+
+        # Lets projectiles like arrows bounce off slime blocks
+        B:"Projectiles Bounce Off Slime Blocks"=false
+
+        # Controls if the End Portal renders its texture on the bottom face
+        B:"Render End Portal Bottom"=true
 
         # Determines how tall sugar cane can grow
         I:"Sugar Cane Size"=3
@@ -178,6 +190,21 @@ general {
             D:"[3] Growth Chance"=0.125
         }
 
+        anvil {
+            # Sets the experience level cap for anvil recipes
+            I:"Anvil XP Level Cap"=40
+        }
+
+        piston {
+            # Integrates a blacklist of blocks which are not allowed to be pushed by pistons
+            B:"[1] Piston Block Blacklist Toggle"=false
+
+            # Blacklist of blocks which are not allowed to be pushed by pistons
+            # Syntax: modid:block
+            S:"[2] Piston Block Blacklist" <
+             >
+        }
+
     }
 
     entities {
@@ -207,6 +234,15 @@ general {
         # Lets baby zombies burn in daylight as in Minecraft 1.13+
         B:"Burning Baby Zombies"=true
 
+        # Lets skeletons burn in daylight
+        B:"Burning Skeletons"=false
+
+        # Lets zombies burn in daylight
+        B:"Burning Zombies"=false
+
+        # Lets the player jump a couple frames after stepping off a ledge, similar to jumping in many platformers
+        B:"Coyote Time Jumping"=true
+
         # Sets the chance for creepers to spawn charged
         # Min: 0.0
         # Max: 1.0
@@ -233,6 +269,9 @@ general {
 
         # Lets husks and strays spawn underground like regular zombies and skeletons
         B:"Husk & Stray Spawning"=true
+
+        # Replaces vanilla Minecarts dropping a Minecart and the contained item, and instead drop the combined item
+        B:"Minecart Drops Itself"=false
 
         # Mobs carrying picked up items will drop their equipment and despawn properly
         B:"Mob Despawn Improvement"=true
@@ -264,6 +303,9 @@ general {
         # Summoned vexes will also die when their summoner is killed
         B:"Soulbound Vexes"=true
 
+        # When viewing in third person, don't stop the camera on non-solid blocks
+        B:"Third Person Ignores Non-solid Blocks"=false
+
         # Allows creating Iron Golems with non-air blocks in the bottom corners of the structure
         B:"Weaken Golem Structure Requirements"=false
 
@@ -273,22 +315,49 @@ general {
         attributes {
             # Sets custom ranges for entity attributes
             B:"[01] Attributes Toggle"=true
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[02] Max Health Min"=-65536.0
             D:"[03] Max Health Max"=65536.0
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[04] Follow Range Min"=-65536.0
             D:"[05] Follow Range Max"=65536.0
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[06] Knockback Resistance Min"=-65536.0
             D:"[07] Knockback Resistance Max"=65536.0
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[08] Movement Speed Min"=-65536.0
             D:"[09] Movement Speed Max"=65536.0
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[10] Flying Speed Min"=-65536.0
             D:"[11] Flying Speed Max"=65536.0
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[12] Attack Damage Min"=-65536.0
             D:"[13] Attack Damage Max"=65536.0
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[14] Attack Speed Min"=-65536.0
             D:"[15] Attack Speed Max"=65536.0
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[16] Armor Min"=-65536.0
             D:"[17] Armor Max"=65536.0
+
+            # Min: 0.0
+            # Max: 1.7976931348623157E308
             D:"[18] Armor Toughness Min"=-65536.0
             D:"[19] Armor Toughness Max"=65536.0
             D:"[20] Luck Min"=-65536.0
@@ -335,11 +404,7 @@ general {
         }
 
         "collision damage" {
-            # Applies horizontal collision damage to the player akin to elytra collision
             B:"[1] Collision Damage Toggle"=false
-
-            # The damage factor that gets multiplied with the player speed
-            # Vanilla default for elytra damage is 10
             I:"[2] Damage Factor"=10
         }
 
@@ -430,6 +495,9 @@ general {
             # Disables skipping night by using a bed while making it still able to set spawn
             B:"Disable Sleeping"=false
 
+            # Disables setting the spawn point by using a bed while making it still able to sleep
+            B:"Disable Sleeping Setting Spawn"=false
+
             # Determines at which time of day sleeping is allowed in ticks (0 - 23999)
             # -1 for vanilla default
             # Min: -1
@@ -457,6 +525,9 @@ general {
         "undead horses" {
             # Lets untamed undead horses burn in daylight
             B:"Burning Undead Horses"=true
+
+            # Prevents skeleton traps spawning during thunderstorms
+            B:"No Skeleton Trap Spawning"=false
 
             # Allows taming of undead horses
             B:"Taming Undead Horses"=true
@@ -558,6 +629,9 @@ general {
         S:"Custom Use Duration" <
          >
 
+        # Causes Glass Bottles to consume the source block of water
+        B:"Glass Bottle Consumes Water Source"=false
+
         # Prevents placing of liquid source blocks in the world
         B:"Hardcore Buckets"=false
 
@@ -566,6 +640,15 @@ general {
 
         # Disables dragon's breath from being a container item and leaving off empty bottles when a stack is brewed with
         B:"No Leftover Breath Bottles"=true
+
+        # Prevents using Mob Spawner Eggs to change what a Spawner is spawning
+        B:"Prevent Mob Eggs from Changing Spawners"=false
+
+        # Prevents placing of liquid source blocks overriding portal blocks
+        B:"Prevent Placing Buckets in Portals"=false
+
+        # Requires the hunger bar to be missing food points equal to or more than the amount restored by the food
+        B:"Smart Eat"=false
 
         # Enables one-time ignition of entities by hitting them with a torch
         B:"Super Hot Torch"=false
@@ -718,10 +801,14 @@ general {
         # Always displays the actual potion duration instead of `**:**`
         B:"Accurate Potion Duration"=false
 
+        # Always returns the player to the main menu when quitting the game
+        B:"Always Return to Main Menu"=false
+
         # Displays the ping in milliseconds of players when viewing the server list
         B:"Better Ping Display"=true
 
         # Enables clicking of `/seed` world seed in chat to copy to clipboard
+        # Required on server AND client
         B:"Copy World Seed"=true
 
         # Restores feature to tilt the camera when damaged
@@ -735,8 +822,21 @@ general {
         # HARD
         S:"Default Difficulty"=HARD
 
+        # Sets the default GUI text color (HEX RGB code) which can improve readability in dark mode resource packs
+        # 404040 for vanilla default
+        S:"Default GUI Text Color"=404040
+
         # Prevents the advancement system from loading entirely
         B:"Disable Advancements"=false
+
+        # Disables the glint overlay on enchantment books
+        B:"Disable Glint Overlay on Enchantment Books"=false
+
+        # Disables the glint overlay on potions
+        B:"Disable Glint Overlay on Potions"=false
+
+        # Disables using the scroll wheel to change hotbar slots wrapping
+        B:"Disable Hotbar Scroll Wrapping"=false
 
         # Disables the narrator functionality entirely
         B:"Disable Narrator"=true
@@ -747,10 +847,11 @@ general {
         # Re-implements parallax rendering of the end portal from 1.10 and older
         B:"End Portal Parallax"=true
 
+        # Improves the Forge mod list GUI by remembering last searches and supporting pipes `|` to look up multiple mods
+        B:"Forge Mod List Improvements"=true
+
         # Disables potion effect particles emitting from yourself
         B:"Hide Personal Effect Particles"=true
-
-        # Provides more information to addPacket removed entity warnings
         B:"Improved Entity Tracker Warning"=true
 
         # Lets background music play continuously without delays
@@ -783,13 +884,19 @@ general {
         # -4 for vanilla default
         I:"Overlay Message Height"=-4
 
+        # Limits particles to a set amount. Should not be set too low, as it will cause particles to appear for a single tick before vanishing
+        # Vanilla default is 16384
+        # Less than or equal to 0 is set to the default
+        I:"Particle Limit"=-1
+
         # Always indent keybind entries from the screen edge, preventing them from overflowing off the left side when particularly long keybind names are present
         B:"Prevent Keybinds from Overflowing Screen"=true
 
         # Removes the 3D Anaglyph button from the video settings menu
-        B:"Remove 3D Anaglyph Button"=true
+        # Incompatible with OptiFine
+        B:"Remove 3D Anaglyph Button"=false
 
-        # Removes the redundant Minecraft Realms button from the main menu
+        # Removes the redundant Minecraft Realms button from the main menu and silences notifications
         # Incompatible with RandomPatches
         B:"Remove Realms Button"=true
 
@@ -812,6 +919,12 @@ general {
 
         # Adds a button to the pause menu to toggle cheats
         B:"Toggle Cheats Button"=false
+
+        # Makes the dismount keybind separate from LSHIFT, allowing it to be rebound independently
+        B:"Use Separate Dismount Key"=false
+
+        # Allows using a custom Narrator key, instead of being stuck with CTRL+B
+        B:"Use Separate Narrator Key"=false
 
         # Sets the maximum experience level players can reach
         # 0 to effectively disable gaining of experience
@@ -902,13 +1015,13 @@ general {
             S:"[1] Mode"=MINECRAFT
 
             # Sounds to play when Minecraft is loaded
-            # Syntax: eventname;pitch
+            # Syntax: eventname;pitch;volume
             S:"[2] Minecraft Loaded Sounds" <
-                entity.lightning.thunder;1.0
+                entity.lightning.thunder;1.0;1.0
              >
 
             # Sounds to play when the world is loaded
-            # Syntax: eventname;pitch
+            # Syntax: eventname;pitch;volume
             S:"[3] World Loaded Sounds" <
              >
         }
@@ -1004,6 +1117,12 @@ general {
             # Syntax: modid:block
             S:"[3] Whitelist" <
              >
+
+            # Excludes items from the swing through grass tweak
+            # Syntax: modid:item
+            S:"[4] Item Blacklist" <
+                erebus:wand_of_animation
+             >
         }
 
         "toast control" {
@@ -1042,6 +1161,64 @@ general {
             B:"[9] Clear Toast Keybind"=true
         }
 
+        advancements {
+            # Enables Advancement GUI Tweaks
+            B:"[01] Advancements Toggle"=false
+
+            # Enables the Vertical and Horizontal Margin settings
+            B:"[02] Size Toggle"=true
+
+            # Sets the minimum Vertical Margin of the Advancement GUI. Too high a number may cause the advancement box to render incorrectly, depending on screen size and GUI scale
+            I:"[03] Vertical Margin"=50
+
+            # Sets the minimum Horizontal Margin of the Advancement GUI. Too high a number may cause the advancement box to render incorrectly, depending on screen size and GUI scale
+            I:"[04] Horizontal Margin"=50
+
+            # Move the Arrow Buttons visible to change focused advancement page from above the advancement box to in the empty top corners, preventing them from going offscreen and being unusable on most vertical margin settings
+            B:"[05] Move Arrow Buttons"=true
+
+            # Hides the page number header, as it will go offscreen and be unusable on most vertical margin settings, and is rarely needed due to the increased page size
+            B:"[06] Hide Page Header"=false
+
+            # Hides page switching buttons when at the maximum/minimum page count
+            B:"[07] Hide Invalid Arrow Buttons"=true
+
+            # Disables the background fading when hovering over an advancement
+            B:"[08] Disable Background Fade on Hover"=true
+
+            # Makes the focused Advancement Tab Title be added to the header, which otherwise is just 'Advancements' for every tab
+            B:"[09] Add Advancement Tab Title to Header"=true
+
+            # Remembers and restores the last advancement tab scroll position
+            B:"[10] Remember Tab Scroll Position"=false
+        }
+
+        "broadcast sounds" {
+            # Plays the sound locally if disabled
+            B:"Broadcast End Portal Creation Sound"=true
+
+            # Plays the sound locally if disabled
+            B:"Broadcast Ender Dragon Death Sound"=true
+
+            # Plays the sound locally if disabled
+            B:"Broadcast Wither Death Sound"=true
+        }
+
+        "connection timeouts" {
+            # Allows configuring read/login timeouts.
+            # If you are having trouble logging into a server of a large modpack, try changing the timeouts below.
+            B:"[1] Connection Timeouts Toggle"=true
+
+            # The connection read timeout in seconds.
+            # This value is used on both client and server.
+            # On the server, also extends the time allowed to respond to a KeepAlive packet.
+            I:"[2] Read Timeout"=90
+
+            # The login timeout in seconds. (Vanilla default: 600 ticks, or 30 secs)
+            # Only used on the server.
+            I:"[3] Login Timeout"=90
+        }
+
     }
 
     performance {
@@ -1052,6 +1229,7 @@ general {
         B:"Check Animated Models"=true
 
         # Adds an IRecipe cache to improve recipe performance in larger modpacks
+        # Incompatible with KemonoCraft
         B:"Crafting Cache"=true
 
         # Improves loading times by removing debug code for missing sounds and subtitles
@@ -1062,6 +1240,9 @@ general {
 
         # Improves rendering performance by disabling rendering the entity inside mob spawners
         B:"Disable Mob Spawner Entity"=false
+
+        # Prevents Rain and Snow Particles from rendering when Raining or Thundering
+        B:"Disable Rain Particles"=true
 
         # Replaces color lookup for sheep to check a predefined table rather than querying the recipe registry
         B:"Fast Dye Blending"=true
@@ -1074,7 +1255,16 @@ general {
         B:"Fast World Loading"=false
 
         # Fixes slow background startup edge case caused by checking tooltips during the loading process
+        # May have side effects concerning tooltips
         B:"Faster Background Startup"=true
+
+        # Improves the speed of switching languages in the Language GUI
+        # Incompatible with OptiFine
+        B:"Improve Language Switching Speed"=false
+
+        # Improves the speed of connecting to servers by setting the InetAddress host name to the IP in situations
+        # where it can be represented as the IP address, preventing getHostFromNameService from being to be run
+        B:"Improve Server Connection Speed"=true
 
         # Silences advancement errors
         B:"Mute Advancement Errors"=true
@@ -1125,6 +1315,7 @@ general {
 
     world {
         # Sets the default height of the overworld's sea level
+        # Supported world types: Default, Biomes O' Plenty
         # Vanilla default is 63
         I:"Sea Level"=63
 
@@ -1201,6 +1392,21 @@ general {
 
             # Determines the maximum Y level of the player at which void particles are spawned
             I:"[9] Particle Spawn Y Level"=8
+        }
+
+        "cave generation" {
+            # Sets custom values for the vanilla cave generation
+            B:"[1] Cave Generation Toggle"=false
+
+            # Size of cave systems
+            # 40 for pre-1.7 generation
+            # 15 for vanilla default
+            I:"[2] Cave Size"=15
+
+            # Chance for generating cave systems
+            # 15 for pre-1.7 generation
+            # 7 for vanilla default
+            I:"[3] Cave Rarity"=7
         }
 
     }
