--- a/config/forcedresourcepacks.cfg
+++ b/config/forcedresourcepacks.cfg
@@ -8,9 +8,12 @@ general {
             Endermen_404.zip
             AudioCraftV1.5.zip
             TZP 1.12.2_2.6.zip
+            Gray's Monster Overhaul v1.0 1.19-1.21.zip
             Boss Bars+ 1.12.zip
             LowOnFire_1.12.zip
             AnimEmis_srparasites.zip
+            SRP Emissives.zip
+            Emis_Rlcraft.zip
             EclecticTrove-1.12.2-1.0.1.zip
             Luminous1.12.2.zip
             RotN_Wither_v.3.0.zip
