sentinel movement speed, now knockbacks on hit

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -65,12 +65,11 @@ attributes {
         minecraft:zombie_pigman;generic.attackDamage;0;-5
 
         minecraft:zombie;generic.movementSpeed;1;0.3
+        blaze;generic.movementSpeed;1;0.1
         
         eyesinthedarkness:eyes;generic.movementSpeed;1;1.0
-        eyesinthedarkness:eyes;generic.followRange;0;40
-
-        minecraft:wither;generic.maxHealth;0;-100;/;0
-     >
+        eyesinthedarkness:eyes;generic.followRange;0;40     
+    >
 }
 
 
@@ -112,14 +111,14 @@ batswarm {
 
 blaze {
     # Set to false to disable ALL blaze features [default: true]
-    B:_blazeFeaturesEnabled=false
+    B:_blazeFeaturesEnabled=true
 
     # Set to true to enable destoying blocks when a Blaze explodes on death. [default: false]
     B:blazeDeathExplosionDestroyBlocks=false
 
     # Explosion strength of the explosions, which blazes create on death
     # Set to 0 to disable this feature [range: 0.0 ~ 32767.0, default: 1.0]
-    S:blazeDeathExplosionStrength=1.0
+    S:blazeDeathExplosionStrength=0.0
 
     # Entities which count as blaze entities [default: [minecraft:blaze]]
     S:blazeEntities <
@@ -127,7 +126,7 @@ blaze {
      >
 
     # Set to false to prevent blazes from igniting entities which touch their hitbox [default: true]
-    B:blazeFlameTouch=true
+    B:blazeFlameTouch=false
 
     # Set to false to prevent blazes from pushing attackers away [default: true]
     B:blazePushAttackersAway=true
