--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -29,6 +29,8 @@ ui_background {
         B:baubles.client.gui.GuiPlayerExpanded=true
         B:"de.keksuccino.fancymenu.menu.fancy.guicreator.CustomGuiLoader$1"=true
         B:dmillerw.menu.gui.GuiRadialMenu=true
+        B:mirror.normalasm.common.crashes.GuiCrashScreen=true
+        B:us.getfluxed.controlsearch.client.gui.GuiNewControls=true
     }
 
 }
@@ -57,6 +59,7 @@ ui_movement {
     }
 
     seenscreens {
+        B:baubles.client.gui.GuiPlayerExpanded=true
         B:dmillerw.menu.gui.GuiRadialMenu=true
     }
 
