fire charm tooltip border

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -151,13 +151,12 @@ definitions {
         minecraft:soul_sand
         quark:soul_powder
         cyclicmagic:charm_antidote
+        cyclicmagic:fire_charm
         quark:black_ash
         minecraft:blaze_powder
         minecraft:blaze_rod
         minecraft:magma_cream
         minecraft:fire_charge
-        %Bandages
-        %Medkit
         contenttweaker:scrambled_magma_eggs
         contenttweaker:glow_stew
         simpleores:tin_pickaxe
