update wyrms (might need testing)

--- a/config/WyrmsOfNyrus/0/general.cfg
+++ b/config/WyrmsOfNyrus/0/general.cfg
@@ -69,7 +69,7 @@ creeped {
     B:"Immune to falling"=false
 
     # Makes the Creeped immune to radioactive gasses. Default: false
-    B:"Immune to radioactive gas"=false
+    B:"Immune to radioactive gas"=true
 }
 
 
