update rlmixins, rltweaker

--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -9,11 +9,16 @@ general {
     ##########################################################################################################
 
     "server options" {
-        # Makes Advanced Mending prioritize damaged items first (Requires SME Overhaul Mixin)
         B:"Advanced Mending Damaged Priority"=true
-
-        # Makes Advanced Mending incompatible with Infinity (Requires SME Overhaul Mixin)
         B:"Advanced Mending Infinity Restriction"=true
+
+        # Allows for multiplying the orbital period calculation result if not overriden first in the format String name, double multiplier
+        S:"Advanced Rocketry Orbital Period Multipliers" <
+         >
+
+        # Allows for overriding orbital period calculation result in the format String name, double value
+        S:"Advanced Rocketry Orbital Period Overrides" <
+         >
 
         # Effect that drinking Ale should give
         S:"Ale Effect"=lycanitesmobs:immunization
@@ -36,17 +41,29 @@ general {
         # Allows for overriding entity view distances with alternate values
         B:"Allow Entity View Distance Override (Vanilla)"=false
 
+        # Makes Antidote Vessel cure/lower effects during attacks
+        B:"Antidote Vessel cures during attacks"=false
+
         # Whether or not Atomic Deconstructor should attempt to replicate /kill damage (More effective, but may cause bugs)
         B:"Atomic Deconstructor /kill"=false
 
         # Whether or not Atomic Deconstructor should work on bosses (May cause bugs)
         B:"Atomic Deconstructor Works on Bosses"=false
 
+        # Upper limit for bedrock to attempt to generate
+        # Min: 1
+        # Max: 2147483647
+        I:"Bedrock Max Range"=5
+
         # Maximum amount of enchantment levels that bookwyrms can digest
         I:"BookWyrm Maximum Level"=30
 
         # Distance difference in a single tick that will cause Astikor Carts to become unpulled
         D:"Cart Distance Limit"=32.0
+
+        # List of blocks to additionally allow caves and ravines to carve
+        S:"Cave and Ravine Carver Block List" <
+         >
 
         # Effect that drinking Cider should give
         S:"Cider Effect"=potioncore:magic_shield
@@ -66,8 +83,22 @@ general {
         # If true, Cobalt Shield will cancel knockback events, instead of only applying an attribute
         B:"Cobalt Shield Cancels Knockback (Bountiful Bauble)"=false
 
+        # Items in this list will not be allowed to be worn as cosmetic armor
+        S:"Cosmetic Armor Item Blacklist" <
+         >
+
+        # Cosmetic Armor Item Blacklist will be treated as a Whitelist
+        B:"Cosmetic Armor Item Whitelist Toggle"=false
+
+        # Makes Cure Potion Effect cure effects during attacks
+        B:"Cure Potion cures during attacks"=false
+
         # Chance per random tick for a corrupted block to attempt spreading, default mod chance is 1.0
         D:"Defiled Corruption Chance"=0.5
+
+        # List of dimension ids and the block (Format: id,blockid) to override as the default filler block
+        S:"Dimension Filler Block Override List" <
+         >
 
         # If the class names of blocks that are collided with that are considered solid should be printed to console
         B:"DramaticTrees Debug Collision Names"=false
@@ -467,6 +498,9 @@ general {
         # Maximum duration of the nausea effect given by wine below quality 0.5
         D:"Wine Maximum Duration Nausea"=6000.0
 
+        # XP orbs will only keep merging until they have this amount of XP stored in them.
+        I:"XP Orb max XP value"=100
+
         ##########################################################################################################
         # entity view distance override list
         #--------------------------------------------------------------------------------------------------------#
@@ -505,6 +539,12 @@ general {
     ##########################################################################################################
 
     "toggle mixins" {
+        # Allows for setting additional blocks to allow to be carved by caves and ravines
+        B:"Additional Caves and Ravines Carver Blocks (Vanilla)"=false
+
+        # Allows for setting orbital period overrides for Advanced Rocketry
+        B:"Advanced Rocketry Orbital Overrides (Advanced Rocketry)"=false
+
         # Replaces the advancements tab button in the escape menu with a button for BetterQuesting's quest menu
         B:"Advancement Tab Quest Replacement (Vanilla/BetterQuesting)"=false
 
@@ -595,6 +635,9 @@ general {
         # Cancels SRParasites manually packet handling for reach bonuses
         B:"Cancel Parasite Reach Packet (SRParasites)"=false
 
+        # Many mods apply potion effects clientside leading to desyncs. Set to true to disable those.
+        B:"Cancel false clientside addPotionEffect calls (Vanilla)"=false
+
         # Fixes passengers and riders being killed when an entity is picked up
         B:"CarryOn Passenger Rider Death Fix (CarryOn)"=false
 
@@ -622,6 +665,9 @@ general {
         # MC-108469 patch, created by EigenCraft Unofficial Patch
         B:"Chunk Entity List (Vanilla)"=false
 
+        # Blocks BlockConcretePowder from running onBlockAdded during worldgen for performance
+        B:"Chunk OnBlockAdded ConcretePowder Disable (Vanilla)"=false
+
         # Makes Chunk Animator stop animating around the player temporarily when using F3+A or changing render distance, to stop easy xray
         B:"ChunkAnimator XRay (Vanilla/ChunkAnimator)"=false
 
@@ -630,6 +676,9 @@ general {
 
         # Modifies the Bountiful Baubles Cobalt Shield Knockback Resistance Attribute from 10 -> 1000.
         B:"Cobalt Shield Increased Resistance (BountifulBaubles)"=false
+
+        # Patches CodeChickenLib's Chunk Unwatch event to not run due to it causing severe world generation lag during dimension changing (Warning: If you use a mod that depends on this event, it may cause issues, you should only use this if you know you don't need it)
+        B:"CodeChickenLib Chunk Unwatch Lag (CodeChickenLib)"=false
 
         # Makes Coffee from Charm reduce the effects of Inebriation from Rustic instead of water
         B:"Coffee Cures Hangover (Rustic/Charm)"=false
@@ -642,6 +691,9 @@ general {
 
         # Fixes CorpseComplex improperly using ExperienceTotal for calculating XP returns and restoring player XP on death when it shouldnt
         B:"CorpseComplex XP Death Fix (CorpseComplex)"=false
+
+        # Allows for defining a blacklist/whitelist of allowed armors to be worn as cosmetics
+        B:"Cosmetic Armor Blacklist (CosmeticArmorReworked)"=false
 
         # Allows for displaying the Y level in DSHuds when holding the Barometer from Inspirations (Also displays light level from photometer)
         B:"DSHuds Barometer Patch (DSHuds/Inspirations)"=false
@@ -661,9 +713,15 @@ general {
         # Disable the digging AI for digging mobs that are not carrying a pickaxe
         B:"Digging AI (Epic Siege Mod)"=false
 
+        # Allows for replacing the world generation filler block by dimension id (Warning: this will occur a slight performance cost, and may cause issues with world generation that expects blocks to be stone)
+        B:"Dimension Custom Filler Block (Vanilla)"=false
+
         # Disables Mo'Bends online checks that can cause the game to freeze on loading
         B:"Disable MoBends Online Checks (MoBends)"=true
         B:"Disable Waystones Used Name Check (Waystones)"=false
+
+        # Disables old SME compatibility checks of BetterSurvival and SpartanWeaponry
+        B:"Disable old SME compat of BS and Spartan (BS/Spartan)"=false
 
         # Fixes Disenchanting table crashing when broken while someone is still in the GUI
         B:"Disenchanting Table Crash Patch (Disenchanter)"=false
@@ -697,11 +755,7 @@ general {
 
         # Attempts to stop the ability to cheese dragons on the edge of render distance
         B:"Enable AntiDragon Cheese (IceAndFire)"=false
-
-        # Directly modify Item attributes for certain SoManyEnchantments Enchantments
         B:"Enchantment Item Attributes (Vanilla/SME)"=false
-
-        # Directly modify ItemStack damage for certain SoManyEnchantments Enchantments
         B:"Enchantment ItemStack Damage (Vanilla/SME)"=false
 
         # Patches Quarks EnderWatcher to greatly improve performance
@@ -753,6 +807,9 @@ general {
 
         # Forces carts to be unpulled when the distance between the cart and the puller in a single tick is too high
         B:"Force Cart Unpull Over Distance (AstikorCarts)"=false
+
+        # Forcibly disables OTG's pregenerator from running its tick operations which wastes performance as it runs when it isn't active
+        B:"Force Disable OTG Pregenerator Ticking (OTG)"=false
 
         # Forces OTG to use Vanilla spawn checks instead of its modified respawn method
         B:"Force OTG No Set Spawn (OTG)"=false
@@ -847,8 +904,14 @@ general {
         # Fixes the mattock from NTP not breaking when tilling ground
         B:"Mattock Breaking Patch (NoTreePunching)"=false
 
+        # Allows for setting the maximum range of bedrock generation
+        B:"Maximum Bedrock Generation Range (Vanilla)"=false
+
         # Force Mending to prioritize damaged items first, instead of randomly picking
         B:"Mending Priorities (Vanilla)"=false
+
+        # Merge XP orbs up to a customisable max XP value
+        B:"Merge XP Orbs (Vanilla)"=false
 
         # Allows for blacklisting biomes to prevent spawning of Mineshafts
         B:"Mineshaft Biome Blacklist Patch (Vanilla)"=false
@@ -888,14 +951,15 @@ general {
         # Adds additional checks to attempt to help prevent OTG's SaveToDIsk from crashing during pregeneration
         B:"OTG Save To Disk Crash Checks (OTG)"=false
 
+        # Adds additional checks to attempt to help prevent OTG from crashing during world-gen
+        B:"OTG World-Gen Crash Checks (OTG)"=false
+
         # Rework Obsidian Skull/Shield fire resistance handling to be less buggy
         B:"Obsidian Skull/Shield Rework (BountifulBaubles)"=false
         B:"Offhand Enchants (Vanilla/RLCombat)"=false
 
         # MC-119971 patch, created by EigenCraft Unofficial Patch
         B:"Outdated Chunk Data (Vanilla)"=false
-
-        # Overhaul a bunch of SoManyEnchantments Enchantment handlers to fix lag/bugs/offhand issues
         B:"Overhaul SME (Vanilla/SME/RLCombat)"=false
 
         # Replaces the Parasite Cleaver effect with a config defined effect
@@ -930,6 +994,9 @@ general {
 
         # At low render distance (<9) mobs can spawn in lazy loaded chunks, creating an automatic mob switch. Set to true to prevent that.
         B:"Prevent Mob spawns in lazy loaded chunks (Vanilla)"=false
+
+        # Prevents hive blocks from being pushed by pistons, which could be exploited to mass produce Nether Wasps.
+        B:"Prevent Nether Wasp Farming (Vanilla/BOP)"=false
 
         # Blacklists PotionCore Revival/1UP potion from affecting non-players, to prevent duping.
         B:"Prevent Revival Potion on Non-Players (PotionCore)"=true
@@ -977,10 +1044,8 @@ general {
         # Prevents the player from removing armor cursed with Binding in the reforging station
         B:"Reforging Binding Fix (BountifulBaubles)"=false
 
-        # Rehandles the Sentient Scythe's AOE effect to make it less ridiculous and more compatible with other effects
+        # Rehandles the Sentient Scythe's (and Maul's) AOE effect to make it less ridiculous and more compatible with other effects
         B:"Rehandle Sentient Scythe Effect (SRParasites/RLCombat)"=false
-
-        # Remove SME from applying capabilities and NBT tags to all entities that are only used for Mortalitas and Rune Resurrection
         B:"Remove SME Mortalitas Resurrection Capability (SoManyEnchantments)"=false
 
         # Removes the ability to add protection enchant to shields
@@ -1003,6 +1068,9 @@ general {
 
         # Adds checks to SRParasite Bush generation to hopefully prevent chunk loading/generation of unloaded chunks
         B:"SRP Bush Generation Loaded Checks (SRParasites)"=false
+
+        # Disables non-SRP armor models from rendering in SRPLayerBipedArmor to avoid crashes
+        B:"SRParasites Layer Biped Armor Crash Fix (SRParasites)"=false
 
         # Fixes ScalingHealth's bandaged effect not having an icon
         B:"ScalingHealth Bandaged Icon Fix (ScalingHealth)"=true
@@ -1027,8 +1095,6 @@ general {
 
         # Smooth eye height when crouching, created by RandomPatches
         B:"Smoothed Crouching (Vanilla)"=false
-
-        # Modifies SoManyEnchantments to fix a crash with TickDynamic, and improve performance
         B:"SoManyEnchantments TickDynamic Crash (SoManyEnchantments)"=false
 
         # Modifies the radius of spawn chunks to keep loaded even when a player is not near
@@ -1090,6 +1156,9 @@ general {
 
         # Fixes arrows in ground rendering particles like tipped arrows when a world is reloaded
         B:"Untipped Arrow Particles Fix (Vanilla)"=true
+
+        # Keeps Quark Usage Ticker rendered permanently
+        B:"Usage Ticker stays visible (Quark)"=false
 
         # Changes the lang key for rubies to avoid overlap with BoP
         B:"VC Ruby Name Change (VariedCommodities)"=false
