--- a/config/rltweaker.cfg
+++ b/config/rltweaker.cfg
@@ -156,7 +156,7 @@ general {
         # Fixes memory leak in EpicSiege's chunk cache class.
         B:epicSiegeChunkCacheMemoryLeak=true
 
-        # Fix epic siege reducing damage of all mobs that are modified to 1.
+        # Fixes epic siege reducing damage of all mobs that are modified to 1.
         B:epicSiegeReducedDamage=true
 
         # Enable to write modified classes to disk.
@@ -165,10 +165,10 @@ general {
         # Fixes crash with bound scrolls and return scrolls, and removes their unexpected spawn setting
         B:fixWaystoneScrolls=true
 
-        # Fix infernal mobs trying to make mobs infernal on reload.
+        # Fixes infernal mobs trying to make mobs infernal on reload.
         B:infernalMobsInfernalOnReload=true
 
-        # Fix infernal mobs modifiers targeting creative players.
+        # Fixes infernal mobs modifiers targeting creative players.
         B:infernalMobsTargetingCreative=true
 
         # Makes some entities stop checking for large entity collisions. Not needed without a max entity radius changing mod.
@@ -179,6 +179,9 @@ general {
 
         # Drastically reduces the time to load shaders in Optifine.
         B:optifineFastShaderLoading=true
+
+        # Fixes OTG's chunk generator enabling block state capturing for no reason which can sometimes cause a memory leak.
+        B:otgChunkGeneratorMemoryLeak=true
 
         # Changes OTG's toInternalName function to only work with valid entity id's which can improve loading times significantly.
         B:otgFastInternalName=true
@@ -228,7 +231,7 @@ general {
         # Patches a dupe with modded item frames, specifically Quark
         B:patchItemFrameDupe=true
 
-        # Fix for item linking from Quark.
+        # Adds a cooldown to the item linking feature from Quark.
         B:patchItemLinking=true
 
         # Fixes modifier books from BountifulBaubles changing the original item when put into an anvil
