--- a/config/invmove.cfg
+++ b/config/invmove.cfg
@@ -27,6 +27,7 @@ ui_background {
 
     seenscreens {
         B:baubles.client.gui.GuiPlayerExpanded=true
+        B:com.gendeathrow.mputils.client.gui.Gui_QuickMenu=true
         B:"de.keksuccino.fancymenu.menu.fancy.guicreator.CustomGuiLoader$1"=true
         B:dmillerw.menu.gui.GuiRadialMenu=true
         B:mirror.normalasm.common.crashes.GuiCrashScreen=true
@@ -60,6 +61,7 @@ ui_movement {
 
     seenscreens {
         B:baubles.client.gui.GuiPlayerExpanded=true
+        B:com.gendeathrow.mputils.client.gui.Gui_QuickMenu=true
         B:dmillerw.menu.gui.GuiRadialMenu=true
     }
 
