--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -839,9 +839,7 @@ targetattacker {
 
     #  [default: [pig;zombie], [sheep;zombie], [sheep;skeleton]]
     S:targetAttacker_List <
-        pig;zombie
-        sheep;zombie
-        sheep;skeleton
+    
      >
 }
 
@@ -859,12 +857,13 @@ targetattacker {
 
 targetblocker {
     # Set to true to enable the target blocker feature. [default: false]
-    B:targetBlocker_Enabled=false
+    B:targetBlocker_Enabled=true
 
     #  [default: [zombie;*], [zombie_pigman;*], [zombie_villager;*], [husk;*], [skeleton;*], [stray;*], [wither_skeleton;*], [slime;*], [blaze;*], [magma_cube;*], [wither;*], [vindication_illager;*], [evocation_illager;*], [creeper;*], [spider;*], [cave_spider;*], [witch;*], [ghast;*]]
     S:targetBlocker_List <
         wither;*
         *;wither
+        da:nether_aberant;da:nether_aberant
      >
 }
 
