--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -26,10 +26,9 @@ general {
         A Nether Wraith Bomb can be crafted to explode blocks.
         You can wall hang by holding shift on a wall.
         Pickaxes, torches, and a few other items never drop on death.
-        Craft a backpack before you head into the Erebus.
         Use a Soul Anchor to set your spawn after arriving in a new dimension.
         Join the Discord to discuss strategies and compete for the world record.
-        The current world record for beating the Nether boss is less than 6 minutes.
+        The current world record for beating the Nether is less than 6 minutes.
         There is no escape.
         Go into the darkness.
         Check points occur after accessing new dimensions and before every major boss.
@@ -39,8 +38,6 @@ general {
         In this eternal cycle, you are but fleeting shadows.
         Each step you take is one walked by countless before you, each as insignificant as the last.
         Read your Journal! It contains crucial information and lore.
-        Middle-click while in your inventory to sort.
-        Middle-click while in your inventory to sort.
         Middle-click while in your inventory to sort.
      >
 
